<resources>
    <string name="app_name">Kading, August 4/18/2018</string>
    <string name="hello_world_august_kading_4_11_2018">Hello World! August Kading 4/11/2018</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Actualname">Enter your name</string>
    <string name="Username">Enter your username</string>
    <string name="Emailaddress">Enter your email</string>
    <string name="Age">Enter your age</string>
    <string name="Dateofbirth">Enter your date of birth</string>
    <string name="Button">Submit</string>
    <string name="textview">Thanks for Signing Up</string>
    <string name="button2">Home</string>
    <string name="alert">All Fields Required!</string>
    <string name="textview2">Name:</string>
    <string name="textview1">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="todo">TODO</string>
    <string name="textviewtab1">TextView</string>
    <string name="textviewtab2">TextView</string>
    <string name="textviewtab3">TextView</string>
    <string name="textviewtab4">TextView</string>
    <string name="textviewtab5">TextView</string>
    <string name="todo2">todo2</string>
    <string name="button3">Home</string>
    <string name="textviewmatches1">TextViewmathces1</string>
    <string name="textviewsettings1">TextView</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="action2">Like</string>
    <string name="todo5">TODO</string>
    <string name="daily_reminder_time">Daily Reminder Time</string>
    <string name="search_distance_mi">Search Distance(mi)</string>
    <string name="toggle">Switch</string>
    <string name="interested_age_range">Interested age range</string>
    <string name="button6">Submit</string>
    <string name="textviewlocation">Location</string>
    <string name="gender">Gender</string>
    <string name="go_to_location_example">Go To Location Example</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>
    <string name="buttonlocation">Get Loc.</string>
</resources>
