<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewsettings1"
            android:layout_width="152dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="@string/textviewsettings1"
            android:hint="@string/textview1"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="177dp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:ems="10"
            android:hint="@string/daily_reminder_time"
            android:inputType="date" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="245dp"
            android:ems="10"
            android:hint="@string/search_distance_mi"
            android:inputType="numberDecimal" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/toggle" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="160dp"
            android:ems="10"
            android:hint="@string/interested_age_range"
            android:inputType="number" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="79dp"
            android:text="@string/button6" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText6"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-180dp"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="textPersonName"
            android:text="Gender" />

    </RelativeLayout>
</ScrollView>